@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT([gsl],[1.9])
+AC_INIT([gsl],[1.9+])
 AC_CONFIG_SRCDIR(gsl_math.h)
 
 AM_INIT_AUTOMAKE([gnu no-dependencies])
@@ -29,13 +29,11 @@ AC_SUBST(GSL_LT_CBLAS_VERSION)
 
 case "$VERSION" in
     *+)
-        AC_DEFINE(RELEASED,0)
         ;;
     *)
-        AC_DEFINE(RELEASED,1)
+        AC_DEFINE(RELEASED,[],[Defined if this is an official release])
         ;;
 esac
-AC_SUBST(RELEASED)      
 
 dnl things required by automake
 dnl AC_ARG_PROGRAM
@@ -80,8 +78,7 @@ double foo (double x) { return x + 1.0 ; };]], [[  foo(1.0)  ]])],[ac_cv_c_exter
 ])
 
 if test "$ac_cv_c_extern_inline" != no ; then
-  AC_DEFINE(HAVE_INLINE,1)
-  AC_SUBST(HAVE_INLINE)
+   AC_DEFINE(HAVE_INLINE,[],[Define if you have inline])
 fi
 
 dnl Checks for header files.
@@ -123,7 +120,7 @@ ac_cv_decl_exit_success_and_failure=no)
 )
 
 if test "$ac_cv_decl_exit_success_and_failure" = yes ; then
-  AC_DEFINE(HAVE_EXIT_SUCCESS_AND_FAILURE)
+  AC_DEFINE(HAVE_EXIT_SUCCESS_AND_FAILURE,1,[Defined if you have ansi EXIT_SUCCESS and EXIT_FAILURE in stdlib.h])
 fi ;
 
 dnl Use alternate libm if specified by user
@@ -175,8 +172,7 @@ if (x == 5678.25) {exit (0);} else {exit(1); };
 }]])],[ac_cv_func_printf_longdouble="yes"],[ac_cv_func_printf_longdouble="no"],[ac_cv_func_printf_longdouble="no"])])
 
 if test "$ac_cv_func_printf_longdouble" != no; then
-  AC_DEFINE(HAVE_PRINTF_LONGDOUBLE,1)
-  AC_SUBST(HAVE_PRINTF_LONGDOUBLE)
+  AC_DEFINE(HAVE_PRINTF_LONGDOUBLE,1,[Define this if printf can handle %Lf for long double])
 fi
 
 AC_CACHE_CHECK([for extended floating point registers],ac_cv_c_extended_fp,
@@ -209,8 +205,7 @@ esac
 ])
 
 if test $ac_cv_c_extended_fp != "no" ; then
-    AC_DEFINE(HAVE_EXTENDED_PRECISION_REGISTERS,1)
-    AC_SUBST(HAVE_EXTENDED_PRECISION_REGISTERS)
+    AC_DEFINE(HAVE_EXTENDED_PRECISION_REGISTERS,1,[Defined on architectures with excess floating-point precision])
 fi
 
 AC_CACHE_CHECK([for IEEE arithmetic interface type], ac_cv_c_ieee_interface,
@@ -363,8 +358,7 @@ int main (void)
 ])
 
 if test "$ac_cv_c_ieee_comparisons" != no ; then
-  AC_DEFINE(HAVE_IEEE_COMPARISONS,1)
-  AC_SUBST(HAVE_IEEE_COMPARISONS)
+  AC_DEFINE(HAVE_IEEE_COMPARISONS,1,[Define this if IEEE comparisons work correctly (e.g. NaN != NaN)])
 fi
 
 dnl Check for IEEE denormalized arithmetic
@@ -384,8 +378,7 @@ int main (void)
 ])
 
 if test "$ac_cv_c_ieee_denormals" != no ; then
-  AC_DEFINE(HAVE_IEEE_DENORMALS,1)
-  AC_SUBST(HAVE_IEEE_DENORMALS)
+  AC_DEFINE(HAVE_IEEE_DENORMALS,1,[Define this if IEEE denormalized numbers are available])
 fi
 
 dnl
