@@ -1,6 +1,7 @@
-2007-08-18  Brian Gough  <bjg@network-theory.co.uk>
+2007-08-22  Brian Gough  <bjg@network-theory.co.uk>
 
-	* config.h: added a fallback for isfinite
+	* configure.ac: started moving definitions out of
+	acconfig.h (deprecated)
 
 2007-07-30  Brian Gough  <bjg@network-theory.co.uk>
 
